RESOLVED FIXED21664
top and bottom black background line not getting displayed
https://bugs.webkit.org/show_bug.cgi?id=21664
Summary top and bottom black background line not getting displayed
Anantha Keesara
Reported 2008-10-16 14:13:19 PDT
I Steps: Go to the attached reduction II Issue: top and bottom black border line not getting displayed IV Other Browsers: IE7: ok FF3: ok V Nightly tested: 37382
Attachments
reduction.zip (498 bytes, application/octet-stream)
2008-10-16 14:13 PDT, Anantha Keesara
no flags
Patch (5.23 KB, patch)
2013-09-23 20:18 PDT, gur.trio
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (825.81 KB, application/zip)
2013-09-23 20:59 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion (847.35 KB, application/zip)
2013-09-23 21:24 PDT, Build Bot
no flags
Patch (5.04 KB, patch)
2013-10-01 07:41 PDT, gur.trio
no flags
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 (623.48 KB, application/zip)
2013-10-01 08:31 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion (745.57 KB, application/zip)
2013-10-01 09:12 PDT, Build Bot
no flags
Patch (112.36 KB, patch)
2013-10-01 11:27 PDT, gur.trio
no flags
Patch (8.60 KB, patch)
2013-12-09 21:13 PST, gur.trio
no flags
Anantha Keesara
Comment 1 2008-10-16 14:13:20 PDT
Created attachment 24415 [details] reduction.zip
gur.trio
Comment 2 2013-09-23 20:18:34 PDT
Build Bot
Comment 3 2013-09-23 20:58:58 PDT
Comment on attachment 212421 [details] Patch Attachment 212421 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1853096 New failing tests: tables/mozilla_expected_failures/other/empty_cells.html tables/mozilla_expected_failures/bugs/bug14007-1.html fast/table/auto-100-percent-width.html tables/mozilla_expected_failures/bugs/bug72393.html fast/repaint/table-cell-move.html tables/mozilla/bugs/bug16012.html fast/table/empty-cells.html css2.1/20110323/margin-applies-to-015.htm ietestcenter/css3/bordersbackgrounds/border-radius-applies-to-007.htm accessibility/table-detection.html fast/block/positioning/negative-right-pos.html fast/table/hittest-tablecell-bottom-edge.html fast/table/fixed-granular-cols.html fast/table/hittest-tablecell-right-edge.html fast/dynamic/insert-before-table-part-in-continuation.html
Build Bot
Comment 4 2013-09-23 20:59:00 PDT
Created attachment 212422 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 5 2013-09-23 21:24:32 PDT
Comment on attachment 212421 [details] Patch Attachment 212421 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/2004478 New failing tests: tables/mozilla_expected_failures/other/empty_cells.html tables/mozilla_expected_failures/bugs/bug14007-1.html fast/table/auto-100-percent-width.html tables/mozilla_expected_failures/bugs/bug72393.html fast/repaint/table-cell-move.html tables/mozilla/bugs/bug16012.html fast/table/empty-cells.html css2.1/20110323/margin-applies-to-015.htm ietestcenter/css3/bordersbackgrounds/border-radius-applies-to-007.htm accessibility/table-detection.html fast/block/positioning/negative-right-pos.html fast/table/hittest-tablecell-bottom-edge.html fast/table/fixed-granular-cols.html fast/table/hittest-tablecell-right-edge.html fast/dynamic/insert-before-table-part-in-continuation.html
Build Bot
Comment 6 2013-09-23 21:24:34 PDT
Created attachment 212423 [details] Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
gur.trio
Comment 7 2013-10-01 07:41:07 PDT
Andrei Bucur
Comment 8 2013-10-01 07:57:54 PDT
Comment on attachment 213083 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=213083&action=review Hello Gurpreet! Just an informal review. > Source/WebCore/rendering/AutoTableLayout.cpp:68 > + bool cellHasContent = cell->firstChild() || cell->style()->hasBorder() || cell->style()->hasPadding() || cell->style()->hasBackground(); Would RenderObject::hasBoxDecorations be more appropriate instead?
gur.trio
Comment 9 2013-10-01 08:07:19 PDT
(In reply to comment #8) > (From update of attachment 213083 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=213083&action=review > > Hello Gurpreet! Just an informal review. > > > Source/WebCore/rendering/AutoTableLayout.cpp:68 > > + bool cellHasContent = cell->firstChild() || cell->style()->hasBorder() || cell->style()->hasPadding() || cell->style()->hasBackground(); > > Would RenderObject::hasBoxDecorations be more appropriate instead? Hi Andrei. Thanks for the review. hasBoxDecorations will cover border and lot of other properties as well and also will not cover background.
Build Bot
Comment 10 2013-10-01 08:31:08 PDT
Comment on attachment 213083 [details] Patch Attachment 213083 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/2889095 New failing tests: fast/table/empty-cells.html fast/table/auto-100-percent-width.html tables/mozilla/bugs/bug1818-6.html
Build Bot
Comment 11 2013-10-01 08:31:10 PDT
Created attachment 213085 [details] Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 12 2013-10-01 09:12:39 PDT
Comment on attachment 213083 [details] Patch Attachment 213083 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/2894135 New failing tests: fast/table/empty-cells.html fast/table/auto-100-percent-width.html tables/mozilla/bugs/bug1818-6.html
Build Bot
Comment 13 2013-10-01 09:12:41 PDT
Created attachment 213089 [details] Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
gur.trio
Comment 14 2013-10-01 11:27:46 PDT
gur.trio
Comment 15 2013-10-01 11:28:07 PDT
(In reply to comment #14) > Created an attachment (id=213101) [details] > Patch Please review.
Andrei Bucur
Comment 16 2013-10-02 02:17:17 PDT
(In reply to comment #9) > (In reply to comment #8) > > (From update of attachment 213083 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=213083&action=review > > > > Hello Gurpreet! Just an informal review. > > > > > Source/WebCore/rendering/AutoTableLayout.cpp:68 > > > + bool cellHasContent = cell->firstChild() || cell->style()->hasBorder() || cell->style()->hasPadding() || cell->style()->hasBackground(); > > > > Would RenderObject::hasBoxDecorations be more appropriate instead? > > Hi Andrei. Thanks for the review. > hasBoxDecorations will cover border and lot of other properties as well and also will not cover background. In RenderBoxModelObject::updateFromStyle setHasBoxDecorations(hasBackground() || styleToUse->hasBorder() || styleToUse->hasAppearance() || styleToUse->boxShadow()); It includes background. Also, don't you want to do the same if the cell has shadows etc?
gur.trio
Comment 17 2013-10-02 02:30:24 PDT
(In reply to comment #16) > (In reply to comment #9) > > (In reply to comment #8) > > > (From update of attachment 213083 [details] [details] [details]) > > > View in context: https://bugs.webkit.org/attachment.cgi?id=213083&action=review > > > > > > Hello Gurpreet! Just an informal review. > > > > > > > Source/WebCore/rendering/AutoTableLayout.cpp:68 > > > > + bool cellHasContent = cell->firstChild() || cell->style()->hasBorder() || cell->style()->hasPadding() || cell->style()->hasBackground(); > > > > > > Would RenderObject::hasBoxDecorations be more appropriate instead? > > > > Hi Andrei. Thanks for the review. > > hasBoxDecorations will cover border and lot of other properties as well and also will not cover background. > > In RenderBoxModelObject::updateFromStyle > > setHasBoxDecorations(hasBackground() || styleToUse->hasBorder() || styleToUse->hasAppearance() || styleToUse->boxShadow()); > > It includes background. Also, don't you want to do the same if the cell has shadows etc? Hi Andrei. Ya for shadows etc need to check not sure.
gur.trio
Comment 18 2013-10-04 02:22:10 PDT
(In reply to comment #17) > (In reply to comment #16) > > (In reply to comment #9) > > > (In reply to comment #8) > > > > (From update of attachment 213083 [details] [details] [details] [details]) > > > > View in context: https://bugs.webkit.org/attachment.cgi?id=213083&action=review > > > > > > > > Hello Gurpreet! Just an informal review. > > > > > > > > > Source/WebCore/rendering/AutoTableLayout.cpp:68 > > > > > + bool cellHasContent = cell->firstChild() || cell->style()->hasBorder() || cell->style()->hasPadding() || cell->style()->hasBackground(); > > > > > > > > Would RenderObject::hasBoxDecorations be more appropriate instead? > > > > > > Hi Andrei. Thanks for the review. > > > hasBoxDecorations will cover border and lot of other properties as well and also will not cover background. > > > > In RenderBoxModelObject::updateFromStyle > > > > setHasBoxDecorations(hasBackground() || styleToUse->hasBorder() || styleToUse->hasAppearance() || styleToUse->boxShadow()); > > > > It includes background. Also, don't you want to do the same if the cell has shadows etc? > > Hi Andrei. Ya for shadows etc need to check not sure. Can someone please review this? Thanks
Andrei Bucur
Comment 19 2013-10-04 02:25:26 PDT
You need to join #webkit on IRC and ask for someone to review. Probably the person to ask is David Hyatt (dhyatt). He is on during the day @ US Pacific Time.
gur.trio
Comment 20 2013-10-09 04:04:30 PDT
(In reply to comment #19) > You need to join #webkit on IRC and ask for someone to review. Probably the person to ask is David Hyatt (dhyatt). He is on during the day @ US Pacific Time. Hi. Can someone please review this. Thanks
gur.trio
Comment 21 2013-12-03 04:48:11 PST
(In reply to comment #20) > (In reply to comment #19) > > You need to join #webkit on IRC and ask for someone to review. Probably the person to ask is David Hyatt (dhyatt). He is on during the day @ US Pacific Time. > > Hi. Can someone please review this. Thanks Please review. Thanks
Simon Fraser (smfr)
Comment 22 2013-12-03 10:03:37 PST
Comment on attachment 213101 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=213101&action=review > Source/WebCore/ChangeLog:9 > + top and bottom black border line not getting displayed > + https://bugs.webkit.org/show_bug.cgi?id=21664 > + > + Reviewed by NOBODY (OOPS!). > + > + The table cell's background was not being displayed. Since the table > + cell had no child correct offsetWidth was not being set. The title and explanation of the bug don't quite match, and make this confusing. The title talks about borders, but the fix is related to background color.
gur.trio
Comment 23 2013-12-03 22:10:49 PST
(In reply to comment #22) > (From update of attachment 213101 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=213101&action=review > > > Source/WebCore/ChangeLog:9 > > + top and bottom black border line not getting displayed > > + https://bugs.webkit.org/show_bug.cgi?id=21664 > > + > > + Reviewed by NOBODY (OOPS!). > > + > > + The table cell's background was not being displayed. Since the table > > + cell had no child correct offsetWidth was not being set. > > The title and explanation of the bug don't quite match, and make this confusing. The title talks about borders, but the fix is related to background color. Thanks Simon for the review. Actually its not border as per the test case , its background. Modified the title as per the bug.
gur.trio
Comment 24 2013-12-08 03:25:28 PST
(In reply to comment #23) > (In reply to comment #22) > > (From update of attachment 213101 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=213101&action=review > > > > > Source/WebCore/ChangeLog:9 > > > + top and bottom black border line not getting displayed > > > + https://bugs.webkit.org/show_bug.cgi?id=21664 > > > + > > > + Reviewed by NOBODY (OOPS!). > > > + > > > + The table cell's background was not being displayed. Since the table > > > + cell had no child correct offsetWidth was not being set. > > > > The title and explanation of the bug don't quite match, and make this confusing. The title talks about borders, but the fix is related to background color. > > Thanks Simon for the review. Actually its not border as per the test case , its background. Modified the title as per the bug. Hi Simon.Can you please review the patch?
Simon Fraser (smfr)
Comment 25 2013-12-09 12:26:39 PST
Please submit a new patch with the corrected Changelog.
gur.trio
Comment 26 2013-12-09 21:13:13 PST
WebKit Commit Bot
Comment 27 2013-12-10 21:53:58 PST
Comment on attachment 218828 [details] Patch Clearing flags on attachment: 218828 Committed r160410: <http://trac.webkit.org/changeset/160410>
WebKit Commit Bot
Comment 28 2013-12-10 21:54:02 PST
All reviewed patches have been landed. Closing bug.
gur.trio
Comment 29 2014-02-24 07:05:40 PST
*** Bug 30949 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.